--- a/style.css
+++ b/style.css
@@ -40,4 +40,32 @@ input[type="number"]::-webkit-outer-spin-button {
   #textCrie {
     text-align: center;
   }
+
+  #modal {
+    width: 370px;
+  }
+}
+
+.closeModal {
+  position: absolute;
+  z-index: 1000;
+  top: 45%;
+  opacity: 0;
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.5s ease;
+}
+
+.divSob {
+  z-index: 999;
+  position: absolute;
+  opacity: 0.7;
+}
+
+.openModal {
+  display: flex;
+  visibility: visible;
+  opacity: 1;
+  transition: 0.5s ease;
 }
